<resources>

    <!-- General -->
    <string name="app_name">Sifo Mobile Analytics SDK for Android</string>

    <!-- Tasks -->
    <string name="task_native_test">native.test</string>

    <!-- InitializationActivity -->
    <string name="default_app_name">MyAppName</string>
    <string name="success_requests">Success requests: %d</string>
    <string name="failed_requests">Failed requests: %d</string>
    <string name="cpid_label">cpId</string>
    <string name="app_name_label">App name</string>
    <string name="panelist_only_label">panelistOnly</string>
    <string name="log_enabled_label">log</string>
    <string name="is_web_view_based_label">isWebViewBased</string>
    <string name="initialize_btn_label">Initialize</string>
    <string name="destroy_btn_label">Destroy framework</string>
    <string name="web_view_btn_label">Web View</string>
    <string name="native_view_btn_label">Native View</string>

    <!-- NativeActivity -->
    <string name="title_native">Native Test</string>
    <string name="description_send_tags">Click on any item in the list to send a tag with that category.</string>

    <!-- CategoryActivity -->
    <string name="title_categories">Second category</string>
    <string name="description_send_tags2">Click on any item in the list to send a tag with that as its second category.</string>
    <string-array name="category_list_2">
        <item>2nd_Category_0</item>
        <item>2nd_Category_1</item>
        <item>2nd_Category_2</item>
        <item>2nd_Category_3</item>
        <item>2nd_Category_4</item>
        <item>2nd_Category_5</item>
        <item>2nd_Category_6</item>
        <item>2nd_Category_7</item>
        <item>2nd_Category_8</item>
    </string-array>

    <!-- ContentActivity -->
    <string name="title_content_id">Content ID</string>
    <string name="description_send_tags3">Click on any item in the list to send a tag with that content ID.</string>
    <string-array name="content_list">
        <item>Content_0</item>
        <item>Content_1</item>
        <item>Content_2</item>
        <item>Content_3</item>
        <item>Content_4</item>
        <item>Content_5</item>
        <item>Content_6</item>
        <item>Content_7</item>
        <item>Content_8</item>
    </string-array>

    <!-- WebViewActivity -->
    <string name="title_web_activity">WebView Test</string>
    <string name="trusted_web_activity">Trusted web activity</string>
    <string-array name="web_view_sites">
        <item>https://www.mediafacts.se</item>
        <item>http://m.aftonbladet.se/</item>
        <item>http://m.dn.se/</item>
        <item>http://mobil.gp.se</item>
        <item>https://www.vk.se/</item>
        <item>https://codepen.io/claeson/pen/JjGjOKL</item>
    </string-array>

</resources>
