<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_margin">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cpIdET"
            style="@style/CustomEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cpid_label" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/appNameET"
            style="@style/CustomEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/app_name_label" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/panelistOnly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:button="@null"
        android:checked="false"
        android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:text="@string/panelist_only_label" />

    <CheckBox
        android:id="@+id/logEnabled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:button="@null"
        android:checked="true"
        android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:text="@string/log_enabled_label" />

    <CheckBox
        android:id="@+id/isWebViewBased"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:button="@null"
        android:checked="false"
        android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:text="@string/is_web_view_based_label" />

    <Button
        android:id="@+id/initialize_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/initialize_btn_label" />

    <Button
        android:id="@+id/destroy_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/destroy_btn_label" />

    <Button
        android:id="@+id/btn_webview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/web_view_btn_label" />

    <Button
        android:id="@+id/btn_native"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/native_view_btn_label" />
    <Button
        android:id="@+id/twa_native"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trusted_web_activity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:weightSum="2">

        <TextView
            android:id="@+id/success_request"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/success_requests"
            android:textColor="@color/holo_green_light" />

        <TextView
            android:id="@+id/fail_request"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/failed_requests"
            android:textColor="@color/holo_red_light" />

    </LinearLayout>

</LinearLayout>